--- a/.github/workflows/Docker-Heroku.yml
+++ b/.github/workflows/Docker-Heroku.yml
@@ -22,7 +22,7 @@ jobs:
         
       - name: Build, Push and Deploy to Heroku #set the whatever name you want to this step
         id: heroku
-        uses: fpmi-hci/proekt12a-bulakhrutkevich@v1.0.0  # use the latest version of the action
+        uses: fpmi-hci/proekt12a-bulakhrutkevich@main  # use the latest version of the action
         with:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
