--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: Dockerfile-heroku
 run:
-  web: python /code/manage.py runserver
+  web: python /code/manage.py runserver 0.0.0.0:$PORT
